--- a/starterOnly/sass/_landing.scss
+++ b/starterOnly/sass/_landing.scss
@@ -179,9 +179,17 @@ input {
   }
 }
 
+@media screen and (max-width: 1180px){
+
+}
+
 @media screen and (max-width: 768px){
   main{
     margin: 0;
     padding: 0;
   }
+}
+@media screen and (max-width: 540px) {
+
+  
 }
