functions  js errors name,  last name , email , birth date

--- a/starterOnly/css/modal.css
+++ b/starterOnly/css/modal.css
@@ -241,6 +241,20 @@ input {
   border: 2px solid #e54858;
 }
 
+.formData.success input {
+  border-color: #09c372;
+}
+
+.formData.error input {
+  border-color: #ff3860;
+}
+
+.formData .error {
+  color: #ff3860;
+  font-size: 12px;
+  height: 13px;
+}
+
 /* 
 input[data-error]::after {
     content: attr(data-error);
