--- a/starterOnly/sass/_footer.scss
+++ b/starterOnly/sass/_footer.scss
@@ -18,7 +18,9 @@ footer {
 
 
 @media screen and (max-width: 1180px){
-  
+  footer .copyrights{
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 768px){
