--- a/starterOnly/sass/_form.scss
+++ b/starterOnly/sass/_form.scss
@@ -1,3 +1,14 @@
+
+.display-confirm{
+  display: none;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 800px;
+}
+// .btn-confirm{
+
+// }
 .formData[data-error]::after {
   content: attr(data-error);
   font-size: 0.4em;
@@ -10,6 +21,7 @@
   opacity: 0;
   transition: 0.3s;
 }
+
 
 .formData[data-error-visible=true]::after {
   opacity: 1;
@@ -30,6 +42,7 @@
   color: #ff3860;
   font-size: 12px;
   height: 13px;
+  margin: 6px 0;
 }
 
 /* 
