--- a/starterOnly/sass/_landing.scss
+++ b/starterOnly/sass/_landing.scss
@@ -40,6 +40,17 @@ main {
   background-color: rgba(26, 39, 156, 0.4);
 }
 
+.bground-nav {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(26, 39, 156, 0.4);
+}
 .content {
   margin: 5% auto;
   width: 100%;
@@ -143,6 +154,43 @@ input {
   display: none;
 }
 
+//Smartwatches devices
+@media screen and (max-width: 320px){
+  
+}
+
+//Smaller devices devices
+@media screen and (max-width: 420px){
+  .hero-headline {
+    font-size: 26px;
+  }
+}
+
+//phone devices
+@media screen and (max-width: 768px){
+  // body{
+  //   background-color: red !important;
+  // }
+  .hero-headline {
+    font-size: 38px !important;
+  }
+  .hero-text {
+    font-size: 17px !important;
+  }
+}
+
+// Tablets and Large Phones
+@media screen and (min-width: 600px){
+  
+}
+
+// Tablets 
+@media screen and (min-width: 768px){
+  
+}
+
+
+
 @media screen and (max-width: 800px) {
   .hero-section {
     display: block;
@@ -164,7 +212,7 @@ input {
     white-space: normal;
   }
   .hero-text {
-    width: unset;
+    width: 80%;
     font-size: 13px;
   }
   .hero-img img {
@@ -180,16 +228,10 @@ input {
 }
 
 @media screen and (max-width: 1180px){
-
-}
-
-@media screen and (max-width: 768px){
-  main{
-    margin: 0;
-    padding: 0;
+  .hero-headline {
+    font-size: 30px;
   }
-}
-@media screen and (max-width: 540px) {
-
   
 }
+
+
